# researcher_framework

./: .gitignore  CLAUDE.md  README.md  config.py  config.yaml  logger.py  main.py  prompts.py  pyproject.toml  run_node.py
configs/: config.py  config.yaml  prompts.py
configs/profiles/: neuralsignal.yaml  trading.yaml
core/artifacts/: __init__.py  store.py
core/graph/: builder.py
core/llm/: factory.py
core/plugins/: job_runner.py  loader.py
core/tools/: arxiv_tool.py  chroma_tool.py  research_tools.py
core/utils/: __init__.py  logger.py  profile_loader.py
graph/: builder.py  graph.py  state.py
graph/nodes/: __init__.py  check_experiment_jobs.py  code_generation.py  create_dataset.py  create_model.py  db_logger.py  evaluate.py  execute_experiment.py  experiment_runner.py  feature_proposal.py  followup_proposal.py  generalization_eval.py  ideate.py  implement.py  refine.py  (+12 more)
llm/: factory.py
plugins/: base.py  job_runner.py  task_runner.py
tests/: conftest.py  test_artifact_store.py  test_arxiv_tool.py  test_chroma_tool.py  test_code_safety.py  test_config.py  test_graph_builder.py  test_job_runner.py  test_llm_factory.py  test_neuralsignal_adapter.py  test_neuralsignal_tasks.py  test_node_experiment_jobs.py  test_node_ideate.py  test_node_prepare_execute.py  test_node_research.py  test_node_store_results.py  test_node_validate.py  test_plugins.py  test_profile_loader.py  test_utils.py
tools/: __init__.py  arxiv_tool.py  chroma_tool.py  mongo_tool.py  research_tools.py
utils/: __init__.py  dataset_registry.py  logger.py  profile_loader.py  utils.py
(+50 files in other folders)
